[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/PlankTile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/GameMenu/InGameMenuWrapper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/MainCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Boxes/Box.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Door/Door.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Portal.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Room.gd" type="Script" id=8]
[ext_resource path="res://Scenes/LoadScreen.tscn" type="PackedScene" id=9]

[node name="Room3" type="Node"]
script = ExtResource( 8 )

[node name="InGameMenuWrapper" parent="." instance=ExtResource( 3 )]

[node name="Camera" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.707107, 0.5, -0.5, 0, 0.707106, 0.707106, 0.707107, -0.5, 0.5, -5.4, 7.62, 5.4 )

[node name="Player" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.90114, 0, 6.3192 )
_current_camera_path = NodePath("../Camera")

[node name="Floor" type="Spatial" parent="."]

[node name="PlankTile" parent="Floor" instance=ExtResource( 1 )]

[node name="PlankTile2" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.468 )

[node name="PlankTile3" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.936 )

[node name="PlankTile4" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 0 )

[node name="PlankTile5" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 2.468 )

[node name="PlankTile6" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 4.936 )

[node name="PlankTile7" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 0 )

[node name="PlankTile8" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 2.468 )

[node name="PlankTile9" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 4.936 )

[node name="PlankTile10" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 0 )

[node name="PlankTile11" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 2.468 )

[node name="PlankTile12" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 4.936 )

[node name="PlankTile13" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 0 )

[node name="PlankTile14" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.402, 0, 2.468 )

[node name="PlankTile15" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.402, 0, 4.936 )

[node name="PlankTile22" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.404 )

[node name="PlankTile23" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.872 )

[node name="PlankTile25" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 7.404 )

[node name="PlankTile26" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 9.872 )

[node name="PlankTile28" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 7.404 )

[node name="PlankTile29" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 9.872 )

[node name="PlankTile31" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 7.404 )

[node name="PlankTile32" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 9.872 )

[node name="PlankTile34" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.402, 0, 7.404 )

[node name="PlankTile35" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.402, 0, 9.872 )

[node name="PlankTile16" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.402, 0, 0 )

[node name="PlankTile17" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 2.468 )

[node name="PlankTile18" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 4.936 )

[node name="PlankTile36" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 7.404 )

[node name="PlankTile37" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 9.872 )

[node name="PlankTile100" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.936, 0, 9.53674e-07 )

[node name="PlankTile101" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.936, 0, 2.468 )

[node name="PlankTile102" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.936, 0, 4.936 )

[node name="PlankTile103" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.468, 0, 9.53674e-07 )

[node name="PlankTile104" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.468, 0, 2.468 )

[node name="PlankTile105" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.468, 0, 4.936 )

[node name="PlankTile121" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, -4.936, 0, 7.404 )

[node name="PlankTile122" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, -4.936, 0, 9.872 )

[node name="PlankTile124" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, -2.468, 0, 7.404 )

[node name="PlankTile125" parent="Floor" instance=ExtResource( 1 )]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, -2.468, 0, 9.872 )

[node name="Wall" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )

[node name="PlankTile" parent="Wall" instance=ExtResource( 1 )]

[node name="PlankTile2" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.468 )

[node name="PlankTile3" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.936 )

[node name="PlankTile4" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 0 )

[node name="PlankTile5" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 2.468 )

[node name="PlankTile6" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 4.936 )

[node name="PlankTile7" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 0 )

[node name="PlankTile8" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 2.468 )

[node name="PlankTile9" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 4.936 )

[node name="PlankTile10" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 0 )

[node name="PlankTile11" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 2.468 )

[node name="PlankTile12" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 4.936 )

[node name="PlankTile37" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.02076, 0, 0 )

[node name="PlankTile38" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.02076, 0, 2.468 )

[node name="PlankTile39" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.02076, 0, 4.936 )

[node name="PlankTile40" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.55276, 0, 0 )

[node name="PlankTile41" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.55276, 0, 2.468 )

[node name="PlankTile42" parent="Wall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.55276, 0, 4.936 )

[node name="Wall2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 12.2136 )

[node name="PlankTile" parent="Wall2" instance=ExtResource( 1 )]

[node name="PlankTile2" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.468 )

[node name="PlankTile3" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.936 )

[node name="PlankTile4" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 0 )

[node name="PlankTile5" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 2.468 )

[node name="PlankTile6" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 4.936 )

[node name="PlankTile7" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 0 )

[node name="PlankTile8" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 2.468 )

[node name="PlankTile9" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 4.936 )

[node name="PlankTile10" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 0 )

[node name="PlankTile11" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 2.468 )

[node name="PlankTile12" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 4.936 )

[node name="PlankTile37" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.02076, 0, 0 )

[node name="PlankTile38" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.02076, 0, 2.468 )

[node name="PlankTile39" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.02076, 0, 4.936 )

[node name="PlankTile40" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.55276, 0, 0 )

[node name="PlankTile41" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.55276, 0, 2.468 )

[node name="PlankTile42" parent="Wall2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.55276, 0, 4.936 )

[node name="BackWall" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, -4.7982, 0, 0 )

[node name="PlankTile" parent="BackWall" instance=ExtResource( 1 )]

[node name="PlankTile2" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.468 )

[node name="PlankTile3" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.936 )

[node name="PlankTile4" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 0 )

[node name="PlankTile5" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 2.468 )

[node name="PlankTile6" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 4.936 )

[node name="PlankTile8" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 2.468 )

[node name="PlankTile9" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 4.936 )

[node name="PlankTile10" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 0 )

[node name="PlankTile11" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 2.468 )

[node name="PlankTile12" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 4.936 )

[node name="PlankTile13" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 0 )

[node name="PlankTile14" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 2.468 )

[node name="PlankTile15" parent="BackWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 4.936 )

[node name="FrontWall" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 14.8332, 0, 0.00237575 )

[node name="PlankTile" parent="FrontWall" instance=ExtResource( 1 )]

[node name="PlankTile2" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.468 )

[node name="PlankTile3" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.936 )

[node name="PlankTile4" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 0 )

[node name="PlankTile5" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 2.468 )

[node name="PlankTile6" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.468, 0, 4.936 )

[node name="PlankTile8" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 2.468 )

[node name="PlankTile9" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.936, 0, 4.936 )

[node name="PlankTile10" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 0 )

[node name="PlankTile11" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 2.468 )

[node name="PlankTile12" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.404, 0, 4.936 )

[node name="PlankTile13" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 0 )

[node name="PlankTile14" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 2.468 )

[node name="PlankTile15" parent="FrontWall" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.872, 0, 4.936 )

[node name="Boxes" type="Spatial" parent="."]

[node name="Box" parent="Boxes" instance=ExtResource( 5 )]
transform = Transform( 0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, 0.642788, -0.8724, 0, 1.65756 )

[node name="Box2" parent="Boxes" instance=ExtResource( 5 )]
transform = Transform( 0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, 0.642788, -3.53322, 0, 1.61394 )

[node name="Box3" parent="Boxes" instance=ExtResource( 5 )]
transform = Transform( 0.573576, 0, 0.819152, 0, 1, 0, -0.819152, 0, 0.573576, 8.41866, 0, 10.4252 )

[node name="Door" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1.15, 0, -1.1875, 0, -5.19073e-08, -4.7982, 0, 6.19404 )

[node name="Door2" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1.15, 0, -1.1875, 0, -5.19073e-08, 14.8308, 0, 6.19404 )

[node name="Obstacles" type="Spatial" parent="."]

[node name="PlankTile4" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 0, 9.5964 )

[node name="PlankTile11" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 2.181, 9.5964 )

[node name="PlankTile12" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 4.7982, 9.5964 )

[node name="PlankTile7" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 0, 7.4154 )

[node name="PlankTile8" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 2.181, 7.4154 )

[node name="PlankTile9" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 4.7982, 7.4154 )

[node name="PlankTile5" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 0, -1.13412 )

[node name="PlankTile22" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 2.181, -1.13412 )

[node name="PlankTile23" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 4.7982, -1.13412 )

[node name="PlankTile10" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 0, -3.31512 )

[node name="PlankTile24" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 2.181, -3.31512 )

[node name="PlankTile25" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 4.7982, -3.31512 )

[node name="PlankTile6" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -1, -8.74228e-08, -3.82138e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 12.6062, 0, -0.0436199 )

[node name="PlankTile26" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -1, -8.74228e-08, -3.82138e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 12.6062, 2.181, -0.0436199 )

[node name="PlankTile27" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -1, -8.74228e-08, -3.82138e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 12.6062, 4.7982, -0.0436199 )

[node name="PlankTile28" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -1, -8.74228e-08, -3.82138e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 14.7872, 0, -0.0436199 )

[node name="PlankTile29" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -1, -8.74228e-08, -3.82138e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 14.7872, 2.181, -0.0436199 )

[node name="PlankTile30" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -1, -8.74228e-08, -3.82138e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 14.7872, 4.7982, -0.0436199 )

[node name="PlankTile13" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 0, 14.3946 )

[node name="PlankTile14" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 2.181, 13.9584 )

[node name="PlankTile15" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 4.7982, 13.9584 )

[node name="PlankTile16" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 0, 13.9584 )

[node name="PlankTile17" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 2.181, 14.3946 )

[node name="PlankTile18" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 4.7982, 14.3946 )

[node name="PlankTile19" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 0, 11.7774 )

[node name="PlankTile20" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 2.181, 11.7774 )

[node name="PlankTile21" parent="Obstacles" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, 10.0326, 4.7982, 11.7774 )

[node name="EnterPortal" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.19404, 0, 6.23766 )
type = 1
return_scene = "Room 2"

[node name="ExitPortal" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.2266, 0, 6.23766 )
type = 0
exit_scene = "Room 4"

[node name="ReturnPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.1575, 0, 6.3192 )

[node name="StartPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.85752, 0, 6.3192 )

[node name="LoadScreen" parent="." instance=ExtResource( 9 )]

[connection signal="player_entered" from="EnterPortal" to="." method="_on_EnterPortal_player_entered"]
[connection signal="player_entered" from="ExitPortal" to="." method="_on_ExitPortal_player_entered"]
